# OpenClawn

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile.example  Dockerfile.role  Dockerfile.sandbox  LICENSE  README.md  docker-compose.yml  openclawn-core-spec-v0.3.md  pyproject.toml
.github/workflows/: ci.yml
core/: activity.py  agent_loop.py  audit.py  autopilot.py  calibration.py  compactor.py  conversation.py  crystallizer.py  event_bus.py  guardrails_config.py  llm_client.py  mcp_client.py  mcp_registry.py  prometheus_metrics.py  router.py  router_config.py  skill_pack.py  tool_audit.py
docs/: README.md  core.md  database.md  infra.md  memory.md  postgres-migration.md  roles.md  scripts.md  security.md  tests.md  tools.md  web.md
flow/: README.md  autopilot-calibration.md  chat-flow.md  conversation-flow.md  memory-flow.md  routing-audit.md  security-flow.md  skill-crystallization.md  tool-execution.md
infra/: backup.py  chat_sessions.py  config.py  database.py  env.py  i18n.py  logging.py  manifest.py  settings.py  users.py  workspace.py
memory/: curator.py  layers.py  search.py  skill_decay.py  skill_feedback.py  user_model.py
migrations/: 001_initial.sql  002_multi_tenant.sql
roles/: contracts.py  registry.py
roles/data/: soul.toml
roles/dev/: soul.toml
roles/pm/: soul.toml
roles/qa/: soul.toml
roles/security/: soul.toml
scripts/: apply_manifest.py  backup_db.py  route_sensitivity.py  seed_routing.py
security/: approval.py  auth.py  guardrails.py  oidc.py  policy_engine.py  question.py  rate_limit.py  shield.py  skill_scanner.py  vault.py
tests/: test_activity.py  test_agent_tool_loop.py  test_approval_endpoint.py  test_audit.py  test_auth.py  test_auth_web.py  test_autopilot.py  test_backup.py  test_blocker.py  test_calibration.py  test_calibration_auto.py  test_chat_sessions.py  test_compaction.py  test_compactor.py  test_contracts.py  test_conversation.py  test_crystallizer.py  test_curator.py  test_database.py  test_event_bus.py  test_evidence.py  test_fallback.py  test_file_download.py  test_guardrails.py  test_heartbeat.py  test_i18n.py  test_logging.py  test_manifest.py  test_mcp.py  test_memory.py  test_memory_wiring.py  test_oidc.py  test_oidc_web.py  test_policy_engine.py  test_prometheus_metrics.py  test_question.py  test_rate_limit.py  test_rbac_web.py  test_role_metrics.py  test_router.py  (+18 more)
tools/: __init__.py  base.py  blocker.py  code.py  data.py  document.py  file_ops.py  git.py  interaction.py  mcp_tool.py  sandbox.py  search.py  shell.py  todo.py  web.py  workspace_tool.py
web/: main.py
web/static/: chat.js  style.css
web/static/css/: activity.css  autopilots.css  base.css  chat.css  conversations.css  layout.css  login.css  pages.css  skills.css  toast.css
web/templates/: 404.html  500.html  _sidebar.html  activity.html  admin_users.html  autopilots.html  conversations.html  index.html  login.html  mcp.html  metrics.html  router.html  settings.html  skills.html
